tests/compile_errors/001-const.buzz
// Can't assign to constant variable
import "std";

test "`const` variable" {
    const yo = "yo";

    yo = "no way";
}

// function arguments are `const`
fun illegal(yo: str) > void {
    yo = "no way";
}

enum Hey {
    lo,
    joe,
}

test "assigning to enum field" {
    Hey.lo = 1;
}
